results with henryk model

--- a/question-answering-challenge.ipynb
+++ b/question-answering-challenge.ipynb
@@ -3133,13 +3133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Some weights of the model checkpoint at henryk/bert-base-multilingual-cased-finetuned-polish-squad2 were not used when initializing BertForQuestionAnswering: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing BertForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Device set to use cuda:0\n"
      ]
     }
@@ -3150,15 +3153,15 @@
     "\n",
     "# Inicjalizacja Elasticsearch i pipeline QA\n",
     "es = Elasticsearch(\"http://localhost:9200\")\n",
-    "qa_pipeline = pipeline(\"question-answering\", model=\"radlab/polish-qa-v2\")\n",
-    "#qa_pipeline = pipeline(\"question-answering\", model=\"henryk/bert-base-multilingual-cased-finetuned-polish-squad2\", device=0)\n",
+    "#qa_pipeline = pipeline(\"question-answering\", model=\"radlab/polish-qa-v2\")\n",
+    "qa_pipeline = pipeline(\"question-answering\", model=\"henryk/bert-base-multilingual-cased-finetuned-polish-squad2\", device=0)\n",
     "# qa_pipeline = pipeline(\"question-answering\", model=\"sdadas/polish-roberta-large-v2\") <- super bad\n",
     "# qa_pipeline = pipeline(\"question-answering\", model=\"sdadas/polish-gpt2-xl\") <- super bad as well"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3211,7 +3214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3228,7 +3231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3237,8 +3240,8 @@
      "text": [
       "stworzył Tomb Raider ?\n",
       "Pytanie: Kto stworzył Tomb Raider?\n",
-      "Najlepsza odpowiedź:  Toby Gard i Paul Howard Douglasa,\n",
-      "Score: 0.9921822547912598\n"
+      "Najlepsza odpowiedź: Lary Croft\n",
+      "Score: 0.9032979011535645\n"
      ]
     }
    ],
@@ -3249,7 +3252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3258,12 +3261,12 @@
      "text": [
       "nazywa bohaterka gier komputerowych serii Tomb Raider ?\n",
       "Pytanie: Jak nazywa się bohaterka gier komputerowych z serii Tomb Raider?\n",
-      "Najlepsza odpowiedź:  Lary Croft\n",
-      "Score: 0.9942718744277954\n",
+      "Najlepsza odpowiedź: Lara Croft\n",
+      "Score: 0.9864362478256226\n",
       "państwach starożytnych powoływani posłowie poselstwa ?\n",
       "Pytanie: Czy w państwach starożytnych powoływani byli posłowie i poselstwa?\n",
-      "Najlepsza odpowiedź:  byli powoływani do służby wojskowej\n",
-      "Score: 0.10543641448020935\n"
+      "Najlepsza odpowiedź: Przez cały okres międzywojenny w Estonii\n",
+      "Score: 0.04615214839577675\n"
      ]
     }
    ],
@@ -3283,7 +3286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3292,8 +3295,8 @@
      "text": [
       "pełnych tygodni rok kalendarzowy ?\n",
       "Pytanie: Ile pełnych tygodni ma rok kalendarzowy?\n",
-      "Najlepsza odpowiedź:  dziesięciu\n",
-      "Score: 0.8816749453544617\n"
+      "Najlepsza odpowiedź: 12\n",
+      "Score: 0.31827422976493835\n"
      ]
     }
    ],
@@ -3311,7 +3314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3324,184 +3327,181 @@
       "Expected: alfa\n",
       "\n",
       "\n",
-      "Score: 0.9538103342056274\n",
+      "Score: 0.8029091954231262\n",
       "\n",
       "\n",
       "nazywa dowolny odcinek łączący punkty okręgu ?\n",
       "Q: Jak nazywa się dowolny odcinek łączący dwa punkty okręgu?\n",
-      "A:  okręgu.\n",
-      "Cięciwą\n",
+      "A: Cięciwa\n",
       "Expected: cięciwa\n",
       "\n",
       "\n",
-      "Score: 0.9903605580329895\n",
+      "Score: 0.32624757289886475\n",
       "\n",
       "\n",
       "państwie rozpoczyna akcja powieści „ pustyni puszczy ” ?\n",
       "Q: W którym państwie rozpoczyna się akcja powieści „W pustyni i w puszczy”?\n",
-      "A:  egipskiego\n",
+      "A: Port Said\n",
       "Expected: w Egipcie\n",
       "\n",
       "\n",
-      "Score: 0.8773927688598633\n",
+      "Score: 0.9021444916725159\n",
       "\n",
       "\n",
       "państwach starożytnych powoływani posłowie poselstwa ?\n",
       "Q: Czy w państwach starożytnych powoływani byli posłowie i poselstwa?\n",
-      "A:  System taki panował głównie w państwach starożytnych\n",
+      "A: Przez cały okres międzywojenny w Estonii\n",
       "Expected: tak\n",
       "\n",
       "\n",
-      "Score: 0.4257476329803467\n",
+      "Score: 0.1981833428144455\n",
       "\n",
       "\n",
       "jakim zespole występowała Hanka filmie „ Żona Australijczyka ” ?\n",
       "Q: W jakim zespole występowała Hanka w filmie „Żona dla Australijczyka”?\n",
-      "A:  Meteory\n",
+      "A: Radio Sarajewo\n",
       "Expected: Mazowsze\n",
       "\n",
       "\n",
-      "Score: 0.9639840722084045\n",
+      "Score: 0.33754268288612366\n",
       "\n",
       "\n",
       "państwie leży Bombaj ?\n",
       "Q: W którym państwie leży Bombaj?\n",
-      "A:  indyjski\n",
+      "A: National Football League Air India\n",
       "Expected: w Indiach\n",
       "\n",
       "\n",
-      "Score: 0.9778725504875183\n",
+      "Score: 0.05362421274185181\n",
       "\n",
       "\n",
       "numer boczny nosi czołg Rudy „ Czterech pancernych ” ?\n",
       "Q: Który numer boczny nosi czołg Rudy z „Czterech pancernych”?\n",
-      "A:  102,\n",
+      "A: 102\n",
       "Expected: 102\n",
       "\n",
       "\n",
-      "Score: 0.9709957838058472\n",
+      "Score: 0.8319798111915588\n",
       "\n",
       "\n",
       "budował Egipcie inżynier Tarkowski , ojciec Stasia ?\n",
       "Q: Co budował w Egipcie inżynier Tarkowski, ojciec Stasia?\n",
-      "A:  świątyni słońca\n",
+      "A: fortyfikacje\n",
       "Expected: Kanał Sueski\n",
       "\n",
       "\n",
-      "Score: 0.964486300945282\n",
+      "Score: 0.20032452046871185\n",
       "\n",
       "\n",
       "owoce niektórych kaktusów jadalne ?\n",
       "Q: Czy owoce niektórych kaktusów są jadalne?\n",
-      "A:  Owoce są jadalne.\n",
-      "Systematyka.\n",
-      "Jeden\n",
+      "A: Owoce niektórych gatunków są jadalne\n",
       "Expected: tak\n",
       "\n",
       "\n",
-      "Score: 0.994006872177124\n",
+      "Score: 0.552059531211853\n",
       "\n",
       "\n",
       "Kwartet – ilu wykonawców ?\n",
       "Q: Kwartet – to ilu wykonawców?\n",
-      "A:  kwartet.\n",
+      "A: Kwadrat\n",
       "Expected: czterech\tczworo\t4\n",
       "\n",
       "\n",
-      "Score: 0.9396551847457886\n",
+      "Score: 0.16569189727306366\n",
       "\n",
       "\n",
       "rzemieślnicy występują ostatniej powieści Witkacego ?\n",
       "Q: Którzy rzemieślnicy występują w ostatniej powieści Witkacego?\n",
-      "A:  budujący szosę\n",
+      "A: Polek Krywko\n",
       "Expected: szewcy\n",
       "\n",
       "\n",
-      "Score: 0.80268394947052\n",
+      "Score: 0.4765170216560364\n",
       "\n",
       "\n",
       "nazywa pierwiastek symbolu Bq ?\n",
       "Q: Jak nazywa się pierwiastek o symbolu Bq?\n",
-      "A:  erythronium\n",
+      "A: panchromium\n",
       "Expected: becquerel\n",
       "\n",
       "\n",
-      "Score: 0.820658266544342\n",
+      "Score: 0.0023173310328274965\n",
       "\n",
       "\n",
       "Hymnem kraju pieśń „ Gwiaździsty sztandar ” ?\n",
       "Q: Hymnem którego kraju jest pieśń „Gwiaździsty sztandar”?\n",
-      "A:  Holandii.\n",
+      "A: Timor Wschodni\n",
       "Expected: Stanów Zjednoczonych\tUSA\n",
       "\n",
       "\n",
-      "Score: 0.9821158051490784\n",
+      "Score: 0.31114086508750916\n",
       "\n",
       "\n",
       "nazywał sztywny kapelusz męski zaokrąglonej główce wąskim lekko uniesionym rondelku , modny drugiej połowie XIX wieku ?\n",
       "Q: Jak nazywał się sztywny kapelusz męski o zaokrąglonej główce i wąskim lekko uniesionym rondelku, modny w drugiej połowie XIX wieku?\n",
-      "A:  uszanki,\n",
+      "A: kłobuk\n",
       "Expected: melonik\n",
       "\n",
       "\n",
-      "Score: 0.9845350384712219\n",
+      "Score: 0.11476171761751175\n",
       "\n",
       "\n",
       "nazywa wypukła wklęsła powierzchnia cieczy pobliżu ścianek naczynia ?\n",
       "Q: Jak nazywa się wypukła albo wklęsła powierzchnia cieczy w pobliżu ścianek naczynia?\n",
-      "A:  menisku:\n",
+      "A: Zwilżalność\n",
       "Expected: menisk\n",
       "\n",
       "\n",
-      "Score: 0.9649572372436523\n",
+      "Score: 0.07990448921918869\n",
       "\n",
       "\n",
       "nazywał fizyk , 1876 r . wynalazł telefon ?\n",
       "Q: Jak nazywał się fizyk, który w 1876 r. wynalazł telefon?\n",
-      "A: James Dewar\n",
+      "A: Aleksandra Bella\n",
       "Expected: Aleksander Graham Bell\n",
       "\n",
       "\n",
-      "Score: 0.9764096140861511\n",
+      "Score: 0.05110200494527817\n",
       "\n",
       "\n",
       "brzmi ulubione powiedzonko klucznika Horeszków Gerwazego ?\n",
       "Q: Jak brzmi ulubione powiedzonko klucznika Horeszków Gerwazego?\n",
-      "A:  „wuj”\n",
+      "A: wuj\n",
       "Expected: mopanku\n",
       "\n",
       "\n",
-      "Score: 0.5165684223175049\n",
+      "Score: 0.006670682225376368\n",
       "\n",
       "\n",
       "gazu najwięcej powietrzu ?\n",
       "Q: Którego gazu jest najwięcej w powietrzu?\n",
-      "A:  metanu\n",
+      "A: tlenu\n",
       "Expected: azotu\n",
       "\n",
       "\n",
-      "Score: 0.9033440947532654\n",
+      "Score: 0.07985763996839523\n",
       "\n",
       "\n",
       "szalej jadowity występuje Polsce ?\n",
       "Q: Czy szalej jadowity występuje w Polsce?\n",
-      "A:  W Polsce notowany na następujących gatunkach roślin: szalej jadowity\n",
+      "A: częsty\n",
       "Expected: tak\n",
       "\n",
       "\n",
-      "Score: 0.9546449780464172\n",
+      "Score: 0.4461115300655365\n",
       "\n",
       "\n",
       "przysłowia nos tabakiery tabakiera nosa ?\n",
       "Q: Według przysłowia nos jest dla tabakiery czy tabakiera dla nosa?\n",
-      "A:  ludowe.\n",
+      "A: twarzy\n",
       "Expected: tabakiera dla nosa\n",
       "\n",
       "\n",
-      "Score: 0.05403676629066467\n",
+      "Score: 0.05600462853908539\n",
       "\n",
       "\n",
-      "Accuracy: 60.00%\n"
+      "Accuracy: 40.00%\n"
      ]
     }
    ],
